--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Cover Page</title>
+    <link rel="icon" href="favicon.png">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <div>
-    <h1>I'm Gabriel</h1>
-    <p>A programmer</p>
-</div>
+    <div id="name_section" >
+        <img src="images/cloud.png" alt="cloud image">
+        <h1>I'm Gabriel</h1>
+        <p>A programmer</p>
+        <img src="images/cloud.png" alt="cloud image">
+        <img src="images/mountain.png" alt="mountain image">
+    </div>
+    <div id="body_section">
+
+    </div id="end_section">
 </body>
+
 </html>
