--- a/index.html
+++ b/index.html
@@ -11,16 +11,32 @@
 </head>
 
 <body>
-    <div id="name_section" >
-        <img src="images/cloud.png" alt="cloud image">
+    <div class="navbar bg-dark">
+        <a href="#" class="navbar-brand">Gabriel Website</a>
+        <button class="btn btn-dark">
+            Button
+        </button>
+    </div>
+    <div id="name_section">
+        <img src="images/cloud.png" id="top_cloud" alt="cloud image">
         <h1>I'm Gabriel</h1>
-        <p>A programmer</p>
-        <img src="images/cloud.png" alt="cloud image">
+        <p id="subtitle">A <span id="pro">pro</span>grammer</p>
+        <img src="images/cloud.png" id="bottom_cloud" alt="cloud image">
         <img src="images/mountain.png" alt="mountain image">
     </div>
     <div id="body_section">
-
-    </div id="end_section">
+    </div>
+    <div id="end_section">
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
